--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                         <li>JAVASCRIPT</li>
                         <li>BOOTSTRAP</li>
                         <li>PYTHON(DJANGO)</li>
+                        <li>REACT.JS</li>
+                        <li>NEXT.JS</li>
                     </ul>
                     </li>
                 <li>
@@ -113,6 +115,13 @@
                         to share publicly.These publicly shared files help other users to download ,access and make use of it.</p>
         
                 </div>
+                <div>
+                    <h3>TUTOR BOOKING DIRECTORY WEBSITE</h3>
+                    <p>Worked on a this live project as a Frontend developer on Next. JS a
+                       React(Javascript) framework for development where students and tutors come
+                       together to interact with each other and providing a better learning and
+                       teaching platform</p>
+                </div>
             </section>
 
             <section class="lang">
@@ -136,7 +145,7 @@
         
             <section class="experience">
                <h2>EXPERIENCE</h2>
-               <P>Fresher</P> 
+               <P>2 MONTHS</P> 
             </section>
         </div>
         </div>
